# docs/swagger.yaml
@@ -3,8 +3,10 @@ definitions:
   dto.AddToCartRequest:
     properties:
       product_id:
+        example: 1
         type: integer
       qty:
+        example: 10
         type: integer
     required:
     - product_id
@@ -12,10 +14,13 @@ definitions:
   dto.CreateProductRequest:
     properties:
       name:
+        example: Gaming Laptop
         type: string
       price:
+        example: 15000000
         type: number
       stock:
+        example: 10
         minimum: 0
         type: integer
     required:
@@ -31,14 +36,18 @@ definitions:
     - password
     - username
     type: object
+  dto.LoginResponse:
+    properties:
+      token:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxLCJyb2xlIjoiSm9obmRvZSIsImV4cCI6MTc4MDAzMzIyMX0.Da9lgarVgBNxa-ET7obQTVvlCPLReyHlFQV5XBF5Fmk
+        type: string
+    type: object
   dto.RegisterRequest:
     properties:
       email:
         type: string
       password:
         minLength: 6
-        type: string
-      role:
         type: string
       username:
         type: string
@@ -47,9 +56,25 @@ definitions:
     - password
     - username
     type: object
+  dto.RegisterResponse:
+    properties:
+      email:
+        example: johndoe@example.com
+        type: string
+      id:
+        example: "1"
+        type: string
+      role:
+        example: user
+        type: string
+      username:
+        example: Johndoe
+        type: string
+    type: object
   dto.RemoveCartItemRequest:
     properties:
       product_id:
+        example: 2
         type: integer
     required:
     - product_id
@@ -69,10 +94,12 @@ definitions:
         type: string
       data: {}
       message:
+        example: success
         type: string
       request_id:
         type: string
       success:
+        example: true
         type: boolean
     type: object
 host: localhost:3000
@@ -101,13 +128,13 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/utils.APIResponse'
+            $ref: '#/definitions/dto.LoginResponse'
         "400":
           description: Bad Request
           schema:
             $ref: '#/definitions/utils.APIResponse'
-        "401":
-          description: Unauthorized
+        "500":
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/utils.APIResponse'
       summary: Login user
@@ -131,7 +158,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/utils.APIResponse'
+            $ref: '#/definitions/dto.RegisterResponse'
         "400":
           description: Bad Request
           schema:
