# dto/login_response.go
@@ -1,0 +1,5 @@
+package dto
+
+type LoginResponse struct {
+	Token string `json:"token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxLCJyb2xlIjoiSm9obmRvZSIsImV4cCI6MTc4MDAzMzIyMX0.Da9lgarVgBNxa-ET7obQTVvlCPLReyHlFQV5XBF5Fmk"`
+}
